mobile and desktop changes

--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -4,9 +4,10 @@
   </section>
 </article>
 <style>
-  @media screen and (min-height: 700px) {
+  @media screen and (min-height: 570px) {
     .animation-container {
       overflow: hidden;
+      height: calc(100vh - 87px);
     }
   }
   .animation-container {
