--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -82,6 +82,7 @@ let fourth = 132;
       </svg>
     </main>
   </PerspectiveContainer>
+  <p>Hello World</p>
 </MainLayout>
 
 <style define:vars={{ firstColor, secondColor, thirdColor, fourth }}>
@@ -222,5 +223,5 @@ container.addEventListener("mouseleave", (e) => {
   });
 });
 
-  window.addEventListener("deviceorientation", changeSVG);
+window.addEventListener("deviceorientation", changeSVG);
 </script>
