--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -6,7 +6,7 @@ import MainLayout from "../layouts/MainLayout.astro";
   <nav>
     <ul>
       <li>
-        <a href="/education"><mark>Professor Daniel</mark></a>
+        <a href="/education"><mark>Technical Instructor</mark></a>
       </li>
       <li>
         <a href="/portfolio"><mark>Software Engineer</mark></a>
