--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -106,7 +106,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
   li:nth-child(2) > a:focus::after,
   li:nth-child(2) > a:hover::after {
-    background: linear-gradient(to bottom right, #a4ffd60d, 80%, #3a4442);
+    background: linear-gradient(to bottom right, #4245440d, 80%, #393939);
   }
 
   li:nth-child(1),
@@ -124,8 +124,8 @@ import MainLayout from "../layouts/MainLayout.astro";
   }
 
   li:nth-child(2) > a {
-    background: url("https://www.rawshorts.com/freeicons/wp-content/uploads/2017/02/svg_double_green_web-s-line-42-548x548.png");
-    background-position: center;
+    background: url("https://media.istockphoto.com/id/1294575605/video/freelancer-working-on-his-laptop-at-night.jpg?s=640x640&k=20&c=I2lm8Av87-nPsp6_RUefXLyPM99l02ogQCZY253oi4o=");
+    background-position: right;
     background-repeat: no-repeat;
     background-color: black;
   }
