--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -128,6 +128,7 @@ import MainLayout from "../layouts/MainLayout.astro";
     background-position: right;
     background-repeat: no-repeat;
     background-color: black;
+    background-size: 250%;
   }
 
   li:nth-child(2):before {
