i get tired of writing these, added a single page layout some stuff about my background and some layout changes for those sections

--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -7,7 +7,7 @@
   @media screen and (min-height: 570px) {
     .animation-container {
       overflow: hidden;
-      height: calc(100vh - 87px);
+      height: calc(100vh);
     }
   }
   .animation-container {
