--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,13 +1,13 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
+import SinglePageLayout from "../layouts/SinglePageLayout.astro";
 ---
 
-<MainLayout title="Daniel Segarra: We Workin Here.">
+<SinglePageLayout title="Daniel Segarra: We Workin Here.">
   <main>
     <h1>404</h1>
     <p>Yeah that's not a thing...</p>
   </main>
-</MainLayout>
+</SinglePageLayout>
 
 <style>
   main {
