--- a/src/layouts/SinglePageLayout.astro
+++ b/src/layouts/SinglePageLayout.astro
@@ -45,14 +45,14 @@ import Footer from "../components/Footer.astro";
     body,
     html {
       background-color: black;
-      /* height: 100%; */
+      height: 100%;
     }
 
     body {
       color: white;
       /*! height: 100vh; */
-      /* display: grid; */
-      /* grid-template-rows: auto 1fr auto; */
+      display: grid;
+      grid-template-rows: auto 1fr auto;
       /* needed to take up full page height */
       /* margin: 0 8px; */
     }
