--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,10 +1,10 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
+import SinglePageLayout from "../layouts/SinglePageLayout.astro";
 ---
 
-<MainLayout title="Portfolio">
+<SinglePageLayout title="Portfolio">
   <h1>Previous Work</h1>
   <p>COMING SHORTLY...</p>
-</MainLayout>
+</SinglePageLayout>
 
 <style></style>
