--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,8 +1,8 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
+import SinglePageLayout from "../layouts/SinglePageLayout.astro";
 ---
 
-<MainLayout title="Professional Work" footer={false}>
+<SinglePageLayout title="Professional Work" footer={false}>
   <nav>
     <ul>
       <li>
@@ -13,7 +13,7 @@ import MainLayout from "../layouts/MainLayout.astro";
       </li>
     </ul>
   </nav>
-</MainLayout>
+</SinglePageLayout>
 
 <style>
   nav,
