--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -7,7 +7,8 @@
   @media screen and (min-height: 570px) {
     .animation-container {
       overflow: hidden;
-      height: calc(100vh);
+      /* height: calc(100vh); */
+      height: 100%;
     }
   }
   .animation-container {
@@ -15,7 +16,7 @@
     justify-content: center;
     align-items: center; */
     perspective: 1000px;
-    /* height: 100%; */
+    height: 100%;
     /* overflow-x: hidden; */
     display: flex;
     justify-content: center;
