--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -192,7 +192,8 @@ let fourth = 132;
     flex-direction: column;
     height: 100%;
     width: 100%;
-    max-width: 950px;
+    /* max-width: 950px; */
+    padding: 0 10%;
   }
 
   .bio {
