--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -182,16 +182,16 @@ let fourth = 132;
   </div>
   <div id="scroll-arrow">
     <svg
-      width="50px"
-      height="50px"
-      viewBox="0 0 24 24"
+      width="26"
+      height="15"
+      viewBox="0 0 26 15"
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
     >
       <path
-        d="M7 10L12 15L17 10"
-        stroke="#fff"
-        stroke-width="1.5"
+        d="M3 2L13.4167 12.4167L23.8333 2"
+        stroke="white"
+        stroke-width="3.125"
         stroke-linecap="round"
         stroke-linejoin="round"></path>
     </svg>
@@ -222,13 +222,17 @@ let fourth = 132;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: 100%; */
     width: 100%;
   }
 
   .two-col {
+    height: 100%;
     text-align: center;
     padding: 0 10%;
+  }
+
+  #bio-intro-container {
+    justify-content: space-around;
   }
 
   .bio {
