change in color for slide marker

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -457,7 +457,7 @@ for (let count = 1; count < scrollItems.length; count++) {
 }
 document.querySelector(
   `#scroll-index > svg:nth-of-type(${1}) > circle`
-).style.fill = "white";
+  ).style.fill = "burlywood";
 
 scrollContainer.addEventListener("scroll", () => {
   for (let i = 0; i < scrollItems.length; i++) {
@@ -470,7 +470,7 @@ scrollContainer.addEventListener("scroll", () => {
     const arrow = document.querySelector("#scroll-arrow");
 
     if (rect.top >= 0 && rect.bottom <= window.innerHeight) {
-      circle.style.fill = "white";
+        circle.style.fill = "burlywood";
       circle.style.transform = "scale(1.2)";
       if (i + 1 === scrollItems.length) {
         arrow.style.transform = "rotate(180deg)";
