some projects included

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -4,7 +4,15 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
 
 <SinglePageLayout title="Portfolio">
   <h1>Previous Work</h1>
-  <p>COMING SHORTLY...</p>
+  <h3>COMING SHORTLY...</h3>
+  <p>There's a lot of old projects/code to go through. These are only a few:</p>
+  <a href="https://danielsegarra.dev/Yahtzee">Yahtzee</a>
+  <a href="https://danielsegarra.dev/throwingAxeMenuAnimation"
+    >throwingAxeMenuAnimation</a
+  >
+  <a href="https://danielsegarra.dev/CFFG2PB">CFFG2PB</a>
+  <a href="https://danielsegarra.dev/Yahtzee">Yahtzee</a>
+  <a href="#">Galaga</a>
 </SinglePageLayout>
 
 <style></style>
