Add Sumaryze That! project link to portfolio

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -6,12 +6,12 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
   <h1>Previous Work</h1>
   <h3>COMING SHORTLY...</h3>
   <p>There's a lot of old projects/code to go through. These are only a few:</p>
+  <a href="https://sumaryzethat.danielsegarra.dev/">Sumaryze That!</a>
   <a href="https://danielsegarra.dev/Yahtzee">Yahtzee</a>
   <a href="https://danielsegarra.dev/throwingAxeMenuAnimation"
     >throwingAxeMenuAnimation</a
   >
   <a href="https://danielsegarra.dev/CFFG2PB">CFFG2PB</a>
-  <a href="https://danielsegarra.dev/Yahtzee">Yahtzee</a>
   <a href="#">Galaga</a>
 </SinglePageLayout>
 
