--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -6,7 +6,13 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
   <h1>Previous Work</h1>
   <h3>COMING SHORTLY...</h3>
   <p>There's a lot of old projects/code to go through. These are only a few:</p>
-  <a href="https://sumaryzethat.danielsegarra.dev/">Sumaryze That!</a>
+  <p>Comparing serverless solutions for Sumaryze That!</p>
+  <a href="https://sumaryzethat.danielsegarra.dev/"
+    >Sumaryze That! (Deployed w/ REPLIT)</a
+  >
+  <a href="https://summarize-these-v6uuloqjzq-ul.a.run.app/"
+    >Sumaryze That! (Deployed w/ Google Cloud Run)</a
+  >
   <a href="https://danielsegarra.dev/Yahtzee">Yahtzee</a>
   <a href="https://danielsegarra.dev/throwingAxeMenuAnimation"
     >throwingAxeMenuAnimation</a
