mobile views for portfolio

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -252,6 +252,12 @@ let pd = "50px";
     height: 100%;
     object-fit: cover;
   }
+  @media screen and (max-width: 500px) {
+    .work_photo {
+      height: 80vw;
+      top: -120px;
+    }
+  }
 </style>
 <script
   define:vars={{
