--- a/src/components/WorkInfo.astro
+++ b/src/components/WorkInfo.astro
@@ -126,7 +126,8 @@ let pd = "50px";
 
   .work_link {
     display: block;
-    width: 365px;
+    max-width: 365px;
+    width: 150%;
     margin-top: 50px;
     margin-left: auto;
     padding: 18px 0;
@@ -187,5 +188,27 @@ let pd = "50px";
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+  .work_desc {
+    text-align: right;
+    max-width: 365px;
+    margin-left: auto;
+  }
+
+  @media screen and (max-width: 500px) {
+    .work_photo {
+      width: 40vw;
+      height: 80vw;
+      position: relative;
+      top: -120px;
+      display: none;
+    }
+    .work_title {
+      font-size: 50px;
+    }
+
+    .work_desc {
+      text-align: left;
+    }
   }
 </style>
